[gd_scene load_steps=4 format=2]

[ext_resource path="res://Multiplayer.gd" type="Script" id=1]
[ext_resource path="res://materials/blur.tres" type="Material" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Multiplayer" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Panel" parent="."]
material = ExtResource( 2 )
anchor_bottom = 1.0
margin_right = 308.0

[node name="HBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="Control/HBoxContainer"]
margin_right = 268.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 740, 70 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Ironhounds"
uppercase = true

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer"]
margin_top = 18.0
margin_right = 268.0
margin_bottom = 82.0
texture = ExtResource( 3 )

[node name="ConnectLabel" type="Label" parent="Control/HBoxContainer"]
margin_top = 86.0
margin_right = 268.0
margin_bottom = 143.0
size_flags_vertical = 3
text = "Connect"
valign = 2

[node name="HostButton" type="Button" parent="Control/HBoxContainer"]
margin_top = 147.0
margin_right = 268.0
margin_bottom = 167.0
text = "Host"
align = 0

[node name="ORLabel2" type="Label" parent="Control/HBoxContainer"]
margin_top = 171.0
margin_right = 268.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 740, 70 )
size_flags_horizontal = 7
size_flags_vertical = 0
text = "
--- or ---
"
uppercase = true

[node name="IPInput" type="LineEdit" parent="Control/HBoxContainer"]
margin_top = 223.0
margin_right = 268.0
margin_bottom = 247.0
clear_button_enabled = true
placeholder_text = "Server IP"

[node name="JoinButton" type="Button" parent="Control/HBoxContainer"]
margin_top = 251.0
margin_right = 268.0
margin_bottom = 271.0
text = "Join"
align = 0

[node name="ChatLabel" type="Label" parent="Control/HBoxContainer"]
margin_top = 275.0
margin_right = 268.0
margin_bottom = 332.0
size_flags_vertical = 3
text = "Chat"
valign = 2

[node name="ChatHistory" type="ItemList" parent="Control/HBoxContainer"]
margin_top = 336.0
margin_right = 268.0
margin_bottom = 532.0
rect_min_size = Vector2( 0, 196 )
size_flags_vertical = 3
auto_height = true

[node name="ChatInput" type="LineEdit" parent="Control/HBoxContainer"]
margin_top = 536.0
margin_right = 268.0
margin_bottom = 560.0
clear_button_enabled = true
placeholder_text = "Chat"

[connection signal="pressed" from="Control/HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="text_entered" from="Control/HBoxContainer/IPInput" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Control/HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
